fix: just wrap tags if there are more than one line

--- a/src/components/TagList/TagList.css
+++ b/src/components/TagList/TagList.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
-    justify-content: space-between;
+    justify-content: start;
 }
 
 .tag {
